cloudformation/lambda/lambdafunction-securitygroup-global-egress-template.yaml
Transform: AWS::Serverless-2016-10-31
Description: >
  This Security Group template is for Security Group Ingress rules and Security Group Egress Global rules,
  allowing inbound traffic from vpc cidr to port 443 and allowing outbound HTTPS traffic to Internet globally via port 443.
  Managed by: central-sre.

Parameters:
  VpcId:
    Type: String
    Description: Vpc Id for Security Group. 

  VpcCidr:
    Type: String
    Description: List of Vpc Cidr for Security Group

Resources:
  LambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: This acts as a virtual firewall for your EC2 instances to control incoming and outgoing traffic for Lambda Security group ruleset
      SecurityGroupIngress:
        - CidrIp:
            !Ref VpcCidr
          Description: Adds ingress rule to security groups which permits instances to recieve traffic from vpc cidr to port 443
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      SecurityGroupEgress: 
        - CidrIp: 0.0.0.0/0
          Description: Adds egress rules to security groups which permits instances to recieve outbound HTTPS traffic to Internet globally
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      VpcId:
        !Ref VpcId 
      
Outputs:
  SecurityGroup: 
    Description: The Lambda functions Security Group ID
    Value: 
      !GetAtt LambdaSecurityGroup.GroupId
